--- a/SimTECH/SimTECH/Pages/Racing/Practice.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Practice.razor
@@ -57,7 +57,7 @@
                     </MudStack>
                 </MudTd>
                 <MudTd Class="number-col">
-                    <NumberDisplay Number="@context.Number" Colour="@context.Colour" Accent="@context.Accent"></NumberDisplay>
+                    <NumberDisplay Colour="@context.Colour" Accent="@context.Accent">@context.Number</NumberDisplay>
                 </MudTd>
                 <MudTd>
                     <MudText>@context.TeamName</MudText>
