--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
@@ -242,8 +242,7 @@
 }
 
 @code {
-    [CascadingParameter]
-    public Season Season { get; set; }
+    [CascadingParameter] public Season Season { get; set; }
 
     List<SeasonDriver> SeasonDrivers { get; set; }
     List<SeasonTeam> SeasonTeams { get; set; }
