--- a/SimTECH/SimTECH/Pages/Season/Stats/QualyBattles.razor
+++ b/SimTECH/SimTECH/Pages/Season/Stats/QualyBattles.razor
@@ -44,11 +44,9 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter]
-    protected MudDialogInstance? StatDialog { get; set; }
+    [CascadingParameter] protected MudDialogInstance? StatDialog { get; set; }
 
-    [Parameter, EditorRequired]
-    public long SeasonId { get; set; }
+    [Parameter, EditorRequired] public long SeasonId { get; set; }
 
     private List<QualyBattle>? QualifyingBattles;
 
