--- a/SimTECH/SimTECH/Pages/Setup/TraitAssign.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TraitAssign.razor
@@ -130,7 +130,7 @@
             new BreadcrumbItem("Assign traits", href: "traitassign", disabled: true),
         });
 
-        AllTraits = await _traitService.GetTraits();
+        AllTraits = await _traitService.GetTraits(StateFilter.Active);
     }
 
     async Task LoadEntrants()
