--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -126,8 +126,7 @@
 </MudContainer>
 
 @code {
-    [Parameter]
-    public long RaceId { get; set; }
+    [Parameter] public long RaceId { get; set; }
 
     SimTECH.Data.Models.Race Race;
     Season Season;
