--- a/SimTECH/SimTECH/Pages/Setup/Traits.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Traits.razor
@@ -28,22 +28,8 @@
             <TemplateColumn T="Trait" Sortable="false">
                 <CellTemplate>
                     <MudButtonGroup>
-                        @if (context.Item.State == State.Closed)
-                        {
-                            <MudIconButton Size="@Size.Small"
-                                       Icon="@Icons.Material.Filled.Block"
-                                       Color="Color.Warning"
-                                       Title="Unavailable"
-                                       OnClick="@(async () => await ToggleState(context.Item, State.Active))" />
-                        }
-                        else
-                        {
-                            <MudIconButton Size="@Size.Small"
-                                       Icon="@Icons.Material.Filled.CheckCircleOutline"
-                                       Color="Color.Success"
-                                       Title="Available"
-                                       OnClick="@(async () => await ToggleState(context.Item, State.Closed))" />
-                        }
+                        <StateTogglerButton CallbackToggled="@(async (bool toggled) => await OnToggleChange(context.Item, toggled))"
+                                            Default="@(context.Item.State == State.Active)" />
                         <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateTrait(context.Item))" />
                     </MudButtonGroup>
                 </CellTemplate>
@@ -132,6 +118,7 @@
         }
     }
 
+    async Task OnToggleChange(Trait trait, bool toggled) => await ToggleState(trait, (toggled ? State.Active : State.Closed));
     async Task ToggleState(Trait trait, State target)
     {
         await TraitService.ChangeState(trait, target);
