--- a/SimTECH/SimTECH/Pages/Statistics/DriverDetailStat.razor
+++ b/SimTECH/SimTECH/Pages/Statistics/DriverDetailStat.razor
@@ -40,8 +40,7 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter]
-    protected MudDialogInstance? StatDialog { get; set; }
+    [CascadingParameter] protected MudDialogInstance? StatDialog { get; set; }
 
     List<Driver> Drivers;
 
