--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddDrivers.razor
@@ -7,7 +7,8 @@
                   Items="@Drivers"
                   MultiSelection="true"
                   Dense="true"
-                  Hover="true">
+                  Hover="true"
+                  Class="extra-dense">
             <HeaderContent>
                 <MudTh>Name</MudTh>
                 <MudTh>Age</MudTh>
@@ -17,7 +18,7 @@
                     <MudStack Row="true" AlignItems="AlignItems.Center">
                         <MudText>@context.FullName</MudText>
                         <MudSpacer />
-                        <CountryFlag Code="@context.Country" />
+                        <CountryFlag Code="@context.Country" Size="FlagSize.Small" />
                     </MudStack>
                 </MudTd>
                 <MudTd>
